--- a/src/app/pages/indicator/indicator.component.html
+++ b/src/app/pages/indicator/indicator.component.html
@@ -1,4 +1,4 @@
-    <div id="step1" *ngIf="current === 0 || current === 1 || current === 2">
+    <div id="step1" *ngIf="current === 0 || current === 1 || current === 2 || current === 3">
       <button
         nz-button
         nzType="question"
@@ -8,10 +8,11 @@
         (nzPopoverVisibleChange)="change($event)"
         nzPopoverTrigger="click"
         [nzPopoverContent]="contentTemplate"
-        class="stepIcon"
+        class="sideButton"
+        id="stepButton"
         [nzPopoverPlacement]="'rightTop'"
       >
-        ?
+      <i nz-icon nzType="question"></i> Help
       </button>
       <ng-template #contentTemplate>
         <div class="stepInfo" *ngIf="current == 0">
@@ -29,6 +30,11 @@
         </div>
         <div class="step2Info" *ngIf="current == 1">
           <p>
+            
+          </p>
+        </div>
+        <div class="step2Info" *ngIf="current == 2">
+          <p>
             Here are the suggested indicators for you, based on the keywords in your
             document and the sectors selected. Indicators are categorised as Impacts,
             Outcomes, or Outputs. If you have not uploaded a document, we are showing
@@ -41,7 +47,7 @@
             that you wish to include in your logframe.
           </p>
         </div>
-        <div class="step2Info" *ngIf="current == 2">
+        <div class="step2Info" *ngIf="current == 3">
           <p>
             In this step you are able to view the success indicators in a visualization
             format. These indicators are derived from the selection you did in previous          
@@ -130,8 +136,10 @@
 <button
   nz-button
   nzType="question"
-  class="feedbackIcon"
+  class="sideButton"
+  id="feedbackButton"
 >
+<i nz-icon nzType="bulb"></i>
   Feedback
 </button></a>
-<button id="uploadButton" nz-button nzType="question" routerLink="/indicators-upload"><i nz-icon nzType="cloud-upload"></i>Submit Indicators</button>
+<button id="uploadButton" nz-button nzType="question" routerLink="/indicators-upload" class="sideButton"><i nz-icon nzType="cloud-upload"></i>Submit Indicators</button>
