[#90tu4c] - Visualization bugs and change warning

--- a/src/app/pages/indicator/indicator.component.scss
+++ b/src/app/pages/indicator/indicator.component.scss
@@ -332,12 +332,9 @@ background-color: #453457;
   transition: right 2s;
 }
 
-#stepButton:hover {
+#stepButton:hover, #feedbackButton:hover, .sideButton:hover {
   right: 0px;
 }
-#feedbackButton:hover {
-  right: 0px;
-}
-.sideButton:hover {
-  right: 0px;
+::ng-deep .ant-btn-primary {
+  background-color: #453457;
 }
