Add edit popup and removed filters button on approval-uploaded

--- a/src/app/manage-indicators/approve-uploaded-indicators/approve-uploaded-indicators.component.html
+++ b/src/app/manage-indicators/approve-uploaded-indicators/approve-uploaded-indicators.component.html
@@ -10,10 +10,10 @@
         <i nz-icon nzType="close"></i>
         Disapprove selected
       </button>
-
+<!-- 
       <button nz-button (click)="fetchByFilters()" nzType="link" nzSize="default" style="position: absolute; right: 0">
         Filter
-      </button>
+      </button> -->
     </div>
   </div>
   <nz-table #indicators nzShowSizeChanger nzBordered [nzData]="indicatorList" [nzFrontPagination]="false"
@@ -43,6 +43,7 @@
         <th nzShowFilter [nzFilters]="levelFilter" (nzFilterChange)="addFilter('levelIds', $event)">
           Level
         </th>
+        <th>Actions</th>
       </tr>
     </thead>
 
@@ -60,6 +61,12 @@
         <td>{{ind.sourceVerification}}</td>
         <td>{{ind.sector}}</td>
         <td>{{ind.level.name}}</td>
+        <td>
+          <div>
+            <div nz-row><a (click)="edit(ind)">Edit</a></div>
+            <div nz-row><a (click)="delete(ind)">Remove</a></div>
+          </div>
+        </td>
       </tr>
     </tbody>
   </nz-table>
@@ -140,3 +147,13 @@
   </tbody>
 </nz-table>
 </div>
+<app-crud-indicator
+  (hideCrudModal)="hideCrudModal($event)"
+  (indicatorAdded)="refreshIndicatorList(true)"
+  (indicatorDeleted)="refreshIndicatorList(true)"
+  (indicatorUpdated)="refreshIndicatorList(false)"
+  [operation]="operation"
+  [indicatorForOperation]="indicator"
+  [displayCrudModal]="displayCrudModal"
+>
+</app-crud-indicator>
