--- a/src/app/indicators-upload/indicators-upload.component.html
+++ b/src/app/indicators-upload/indicators-upload.component.html
@@ -10,6 +10,7 @@
   class="sideButton"
   id="stepButton"
   [nzPopoverPlacement]="'rightTop'"
+  data-cy="help"
 >
 <i nz-icon nzType="question"></i> Help
 </button>
@@ -19,6 +20,7 @@
     nzType="question"
     class="sideButton"
     id="feedbackButton"
+    data-cy="feedback"
   >
   <i nz-icon nzType="bulb"></i>
     Feedback
