Add tooltip to properties button on result tab

--- a/src/app/pages/indicator/indicator.component.html
+++ b/src/app/pages/indicator/indicator.component.html
@@ -30,7 +30,19 @@
         </div>
         <div class="step2Info" *ngIf="current == 1">
           <p>
-            
+            If you uploaded a document, here you will see the results statements (Impact, Outcome and Outputs) of your project. We are using machine learning to identify them, so there might be some mistakes.
+            <br/><br/>
+            On the right side of the table you can see the quality of the results statement. The higher the score, the better ,the colours are there to help you see the quality.
+            <br/><br/>
+            You can do 4 actions here, you can add new indicators through the purple "+" button, that is always at the end of the list. There you can chose the level and write the text.
+            <br/><br/>
+            You can always adjust change your results statement to improve it (or if our model did not find it adequately), and then the second button (with the tick in green), allows you to run the model again to check the quality of the statement. You can do this as many times as you want.
+            <br/><br/>
+            The red "x" deletes a results statement, be careful, we do not ask for confirmation.
+            <br/><br/>
+            Once you are satisfied with your results statements, you can click next. Whatever is now in this table will be moved to the visualisation and the final download automatically.
+            <br/><br/>
+            Should you not want to use this function, you can delete all statements and move on.
           </p>
         </div>
         <div class="step2Info" *ngIf="current == 2">
