--- a/src/app/pages/indicator/scanresult/scanresult.component.scss
+++ b/src/app/pages/indicator/scanresult/scanresult.component.scss
@@ -31,7 +31,7 @@
 }
 
 #footerBar {
-  background-color: #453457ab;
+  background-color: rgba(69, 52, 87, 0.85);
   position: fixed;
   left: 0px;
   bottom: 0px;
@@ -65,7 +65,7 @@
   background-color: #A5C2AE;
   color: white;
   font-size: 1.5rem;
-
+  cursor: pointer;
 }
 
 #baselineSpin {
