--- a/src/styles.scss
+++ b/src/styles.scss
@@ -259,7 +259,7 @@ app-manage-indicators {
   position: absolute;
   right: -145px;
   background: #453457;
-  border-radius: 0.6rem 0 0 0.6rem;
+  border-radius: 5px 0px 0px 5px;
   font-size: 1rem;
   font-weight: 700;
   color: #ffffff;
