--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,7 @@
           <li nz-menu-item *ngIf="isIndicatorAdmin()" routerLink="/manage-indicators"><i nz-icon nzType="table" nzTheme="outline"></i>Manage indicators</li>
           <li nz-menu-item *ngIf="isIndicatorAdmin()" routerLink="/manage-indicators/approve-uploaded"><i nz-icon nzType="carry-out" nzTheme="outline"></i>Approve indicators</li>
           <li nz-menu-item *ngIf="isSecAdmin()" routerLink="/user-management"><i nz-icon nzType="lock" nzTheme="outline"></i>Manage users
+          <li nz-menu-item *ngIf="isSecAdmin()" routerLink="/statistics"><i nz-icon nzType="bar-chart" nzTheme="outline"></i>Statistics
           <li nz-menu-item *ngIf="isAuthenticated" (click)="logout()"><i nz-icon nzType="logout"></i>Logout</li>
           <li nz-menu-item *ngIf="!isAuthenticated" routerLink="/login"><i nz-icon nzType="login"></i>Login</li>
         </ul>
