[#90ptpc] - Update SDG Code

--- a/src/app/pages/indicator/scanresult/scanresult.component.html
+++ b/src/app/pages/indicator/scanresult/scanresult.component.html
@@ -166,7 +166,7 @@
             [nzFilters]="searchFilter.sdgCode"
             [nzFilterFn]="filterSDGCode"
           >
-            SDG<br />Code
+            SDG Code
           </th>
           <th
             nz-popover
