[#98qhjm] - Added angular modules

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
       <div>
         <br />
         <img src="assets/arqaam-13 1.png" alt="" /><br />
-        <a routerLink="/terms">Terms Of Use </a><br />
+        <a routerLink="/terms">Terms Of Use</a><br />
         <a routerLink="/dataprotection">Data Protection Declaration</a><br />
         <a routerLink="/imprint">Imprint</a><br /><br />
       </div>
@@ -98,4 +98,4 @@
     </nz-footer>
   </nz-layout>
 </div>
-<app-pop></app-pop>
+<app-dialog></app-dialog>
