--- a/src/app/pages/indicator/indicator.component.html
+++ b/src/app/pages/indicator/indicator.component.html
@@ -99,7 +99,7 @@
     <app-selectdocument *ngIf="current === 0"> </app-selectdocument>
     <app-result *ngIf="current === 1"> </app-result>
     <app-scanresult *ngIf="current === 2"> </app-scanresult>
-    <app-visualisationresult *ngIf="current === 3"> </app-visualisationresult>
+    <app-visualization *ngIf="current === 3"> </app-visualization>
     <app-downloadresult *ngIf="current === 4"> </app-downloadresult>
   </div>
   <div class="steps-action">
