[#a6vmx5] - Add Knowledge Base side button

--- a/src/app/pages/indicator/indicator.component.html
+++ b/src/app/pages/indicator/indicator.component.html
@@ -155,3 +155,14 @@
   Feedback
 </button></a>
 <button id="uploadButton" nz-button nzType="question" routerLink="/indicators-upload" class="sideButton"><i nz-icon nzType="cloud-upload"></i>Submit Indicators</button>
+<a href="https://logframelab.tawk.help/" target="_blank">
+<button
+    nz-button
+    nzType="question"
+    class="sideButton"
+    id="knowledgeBaseButton"
+  >
+  <i nz-icon nzType="book"></i>
+    Knowledge Base
+  </button>
+</a>
