--- a/src/styles.scss
+++ b/src/styles.scss
@@ -236,6 +236,9 @@ app-manage-indicators {
 #uploadButton {
   top: 25rem;
 }
+#knowledgeBaseButton {
+  top: 42rem;
+}
 @media screen and (max-height: 1050px) {
   #uploadButton {
     top: 37rem;
