Update border radius to be consistent and change SDG Code to SDG Goal

--- a/src/app/indicators-upload/indicators-upload.component.html
+++ b/src/app/indicators-upload/indicators-upload.component.html
@@ -25,7 +25,17 @@
   <i nz-icon nzType="bulb"></i>
     Feedback
   </button></a>
-
+<a href="https://logframelab.tawk.help/" target="_blank">
+  <button
+      nz-button
+      nzType="question"
+      class="sideButton"
+      id="knowledgeBaseButton"
+    >
+    <i nz-icon nzType="book"></i>
+      Knowledge Base
+    </button>
+  </a>
 <ng-template #contentTemplate>
   <div class="stepInfo">
     <p class="stepPara">
