--- a/src/app/manage-indicators/approve-uploaded-indicators/approve-uploaded-indicators.component.html
+++ b/src/app/manage-indicators/approve-uploaded-indicators/approve-uploaded-indicators.component.html
@@ -31,7 +31,7 @@
         <th>Keywords</th>
         <th>Name</th>
         <th nzShowFilter [nzFilters]="sdgCodeFilter" (nzFilterChange)="addFilter('sdgCode', $event)">
-          SDG Code
+          SDG Goal
         </th>
         <th nzShowFilter [nzFilters]="sourceFilter" (nzFilterChange)="addFilter('source', $event)">
           Source
@@ -87,7 +87,7 @@
       <th>Keywords</th>
       <th>Name</th>
       <th>
-        SDG Code
+        SDG Goal
       </th>
       <th>
         Source
