--- a/src/app/pages/indicator/scanresult/scanresult.component.html
+++ b/src/app/pages/indicator/scanresult/scanresult.component.html
@@ -159,14 +159,14 @@
             nzShowFilter
             nzColumnKey="sdgCode"
             nz-popover
-            nzPopoverTitle="SDG Code"
+            nzPopoverTitle="SDG Goal"
             nzPopoverContent="This is in relations to the 17 SDGs."
             nzWidth="15%"
             nzShowFilter
             [nzFilters]="searchFilter.sdgCode"
             [nzFilterFn]="filterSDGCode"
           >
-            SDG Code
+            SDG Goal
           </th>
           <th
             nz-popover
@@ -367,14 +367,14 @@
               nzShowFilter
               nzColumnKey="sdgCode"
               nz-popover
-              nzPopoverTitle="SDG Code"
+              nzPopoverTitle="SDG Goal"
               nzPopoverContent="This is in relations to the 17 SDGs."
               nzWidth="10%"
               nzShowFilter
               [nzFilters]="searchFilter.sdgCode"
               [nzFilterFn]="filterSDGCode"
             >
-              SDG Code
+              SDG Goal
             </th>
             <th
               nz-popover
