--- a/src/app/pages/indicator/selectdocument/selectdocument.component.scss
+++ b/src/app/pages/indicator/selectdocument/selectdocument.component.scss
@@ -59,7 +59,7 @@
 .uploadIcon {
     background: #a5c2ae;
     padding: 12px;
-    border-radius: 1rem;
+    border-radius: 5px;
     font-size: 4rem;
     color: #ffffff;
 }
