--- a/src/app/pages/indicator/indicator.component.html
+++ b/src/app/pages/indicator/indicator.component.html
@@ -17,7 +17,7 @@
       <ng-template #contentTemplate>
         <div class="stepInfo" *ngIf="current == 0">
           <p class="stepPara">
-            First, either upload a single Word document here (.doc or .docx).
+            First, either upload a single MS Word document here (.doc or .docx).
             You can use your grant or project funding application file for this purpose.
             <br/><br/>
             You can also start without a file upload and just access the entire database of indicators.
