--- a/src/app/pages/indicator/selectdocument/selectdocument.component.html
+++ b/src/app/pages/indicator/selectdocument/selectdocument.component.html
@@ -83,7 +83,7 @@
     <i class = "uploadIcon" nz-icon nzType="folder" nzTheme="outline"></i>
     <p class="ant-upload-text">Click here to upload</p>
     <p class="ant-upload-hint">
-      Support for a single word file upload.
+      Support for a single MS Word file upload.
     </p>
     <p>{{ fileName }}</p>
     <div class="disclaimer">
