save canvas visualisation

--- a/src/app/pages/indicator/visualization/visualization.component.html
+++ b/src/app/pages/indicator/visualization/visualization.component.html
@@ -9,7 +9,7 @@
       </div>
   <div class="row">
     <div class="draw2d" [style.height]="height">
-      <div onselectstart="javascript:/*IE8 hack*/return false" id="gfx_holder"
+      <div #canvas_vis onselectstart="javascript:/*IE8 hack*/return false" id="gfx_holder"
         style="width:2100px; position: absolute;left: 0;" [style.height]="canvasHeight"></div>
     </div>
   </div>
