--- a/src/styles.scss
+++ b/src/styles.scss
@@ -195,6 +195,9 @@ h1, h2, h3, p, button {
   text-transform: uppercase;
   color: #ffffff;
 }
+.default-button:hover {
+  background-color: #a5c2ae;
+}
 
 .toolbar-btn{
   margin-right: 10px;
