--- a/src/app/pages/indicator/indicator.component.scss
+++ b/src/app/pages/indicator/indicator.component.scss
@@ -56,6 +56,9 @@
 
   color: #ffffff;
 }
+.steps-button:hover {
+  background-color: #a5c2ae;
+}
 /*
 //before selection text color
 ::ng-deep .ant-steps-item-custom .ant-steps-item-icon > .ant-steps-icon {
